@@ -11,7 +11,7 @@ comment|/* A lexical scanner generated by flex */
 end_comment
 
 begin_comment
-comment|/* Scanner skeleton version:  * $Header: /home/daffy/u0/vern/flex/RCS/flex.skl,v 2.89 96/05/25 21:02:21 vern Exp $  */
+comment|/* Scanner skeleton version:  * $Header: /home/daffy/u0/vern/flex/RCS/flex.skl,v 2.91 96/09/10 16:58:48 vern Exp $  */
 end_comment
 
 begin_define
@@ -758,7 +758,7 @@ operator|(
 name|yyconst
 name|char
 operator|*
-name|str
+name|yy_str
 operator|)
 argument_list|)
 decl_stmt|;
@@ -22749,6 +22749,10 @@ operator|==
 name|YY_BUFFER_EOF_PENDING
 condition|)
 comment|/* don't do the read, it's not guaranteed to return an EOF, 		 * just force an EOF 		 */
+name|yy_current_buffer
+operator|->
+name|yy_n_chars
+operator|=
 name|yy_n_chars
 operator|=
 literal|0
@@ -22940,6 +22944,12 @@ name|yy_n_chars
 argument_list|,
 name|num_to_read
 argument_list|)
+expr_stmt|;
+name|yy_current_buffer
+operator|->
+name|yy_n_chars
+operator|=
+name|yy_n_chars
 expr_stmt|;
 block|}
 if|if
@@ -23459,6 +23469,10 @@ operator|-
 name|source
 argument_list|)
 expr_stmt|;
+name|yy_current_buffer
+operator|->
+name|yy_n_chars
+operator|=
 name|yy_n_chars
 operator|=
 name|yy_current_buffer
@@ -23590,6 +23604,17 @@ argument_list|()
 condition|)
 block|{
 case|case
+name|EOB_ACT_LAST_MATCH
+case|:
+comment|/* This happens because yy_g_n_b() 					 * sees that we've accumulated a 					 * token and flags that we need to 					 * try matching the token before 					 * proceeding.  But for input(), 					 * there's no matching to consider. 					 * So convert the EOB_ACT_LAST_MATCH 					 * to EOB_ACT_END_OF_FILE. 					 */
+comment|/* Reset buffer status. */
+name|yyrestart
+argument_list|(
+name|yyin
+argument_list|)
+expr_stmt|;
+comment|/* fall through */
+case|case
 name|EOB_ACT_END_OF_FILE
 case|:
 block|{
@@ -23598,20 +23623,9 @@ condition|(
 name|yywrap
 argument_list|()
 condition|)
-block|{
-name|yy_c_buf_p
-operator|=
-name|yytext_ptr
-operator|+
-name|offset
-expr_stmt|;
 return|return
 name|EOF
 return|;
-block|}
-end_expr_stmt
-
-begin_if
 if|if
 condition|(
 operator|!
@@ -23619,43 +23633,29 @@ name|yy_did_buffer_switch_on_eof
 condition|)
 name|YY_NEW_FILE
 expr_stmt|;
-end_if
-
-begin_ifdef
 ifdef|#
 directive|ifdef
 name|__cplusplus
-end_ifdef
-
-begin_return
 return|return
 name|yyinput
 argument_list|()
 return|;
-end_return
-
-begin_else
 else|#
 directive|else
-end_else
-
-begin_return
 return|return
 name|input
 argument_list|()
 return|;
-end_return
-
-begin_endif
 endif|#
 directive|endif
-end_endif
+block|}
+end_expr_stmt
 
-begin_label
-unit|}  				case
+begin_case
+case|case
 name|EOB_ACT_CONTINUE_SCAN
-label|:
-end_label
+case|:
+end_case
 
 begin_expr_stmt
 name|yy_c_buf_p
@@ -23669,44 +23669,6 @@ end_expr_stmt
 begin_break
 break|break;
 end_break
-
-begin_case
-case|case
-name|EOB_ACT_LAST_MATCH
-case|:
-end_case
-
-begin_ifdef
-ifdef|#
-directive|ifdef
-name|__cplusplus
-end_ifdef
-
-begin_expr_stmt
-name|YY_FATAL_ERROR
-argument_list|(
-literal|"unexpected last match in yyinput()"
-argument_list|)
-expr_stmt|;
-end_expr_stmt
-
-begin_else
-else|#
-directive|else
-end_else
-
-begin_expr_stmt
-name|YY_FATAL_ERROR
-argument_list|(
-literal|"unexpected last match in input()"
-argument_list|)
-expr_stmt|;
-end_expr_stmt
-
-begin_endif
-endif|#
-directive|endif
-end_endif
 
 begin_expr_stmt
 unit|} 			} 		}  	c
@@ -24295,6 +24257,12 @@ decl_stmt|;
 endif|#
 directive|endif
 block|{
+if|if
+condition|(
+operator|!
+name|b
+condition|)
+return|return;
 name|b
 operator|->
 name|yy_n_chars
@@ -24550,18 +24518,18 @@ parameter_list|(
 name|yyconst
 name|char
 modifier|*
-name|str
+name|yy_str
 parameter_list|)
 else|#
 directive|else
 function|YY_BUFFER_STATE yy_scan_string
 parameter_list|(
-name|str
+name|yy_str
 parameter_list|)
 name|yyconst
 name|char
 modifier|*
-name|str
+name|yy_str
 decl_stmt|;
 endif|#
 directive|endif
@@ -24575,7 +24543,7 @@ name|len
 operator|=
 literal|0
 init|;
-name|str
+name|yy_str
 index|[
 name|len
 index|]
@@ -24587,7 +24555,7 @@ empty_stmt|;
 return|return
 name|yy_scan_bytes
 argument_list|(
-name|str
+name|yy_str
 argument_list|,
 name|len
 argument_list|)
